# fastAPI-backend

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: db.py  main.py  migrate_db.py
api/cruds/: attendance.py  board.py  chat.py  device_info.py  door_state_manager.py  event.py  group_chat.py  meeting.py  private_chat.py  report.py  seat.py  user.py
api/models/: attendance.py  board.py  chat.py  device_info.py  door_state_manager.py  event.py  group_chat.py  meeting.py  private_chat.py  report.py  seat.py  supervisor.py  user.py
api/routers/: attendance.py  board.py  chat.py  device_info.py  door_state_manager.py  event.py  group_chat.py  mail.py  meeting.py  private_chat.py  report.py  seat.py  user.py
api/schemas/: attendance.py  board.py  chat.py  device_info.py  door_state_manager.py  event.py  group_chat.py  meeting.py  private_chat.py  report.py  seat.py  user.py
